fix create test file for multi modules project